--- a/index.html
+++ b/index.html
@@ -2,20 +2,26 @@ alura-books
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="reset.css">
-        <title>AluraBooks</title>
-    </head>
-
-
-    <body>
-        <h1>Alura Books </h1>
-    </body>
-</html>
-    </head>
-    <body>
-
-    </body>
-</html>
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>AluraBooks</title>
+            <link rel="stylesheet" href="reset.css">
+            <link rel="stylesheet" href="styles.css">
+        </head>
+        <body>
+            <header class="cabeçalho">
+                <div class="container"> 
+                    <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+                    <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+                </div>
+                <div class="container">
+                    <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+                    <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
+                    <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+                </div>
+            </header>
+        </body>
+    </html>
+        
+      
